--- a/index.html
+++ b/index.html
@@ -1,11 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dayana Freitas</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <!-- Nome, informações básicas e foto -->
+        <div id="introducao">
+            <h1> Dayana Freitas </h1>
+            <p>
+                Estudante de TI
+            </p>
+        </div>
+        <div id="avatar">
+            <img src="imagens/avatar.jpg" alt="Foto Dayana">
+        </div>
+    </header>
+    <main>
+        <article>
+            <section id="sobre">
+                <h1>Sobre mim</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce malesuada, enim id tempor egestas, tortor odio fermentum ante, sit amet rutrum magna ante sed tellus. Nam quis varius nisl. Pellentesque non magna consectetur odio commodo tempor. Cras at ultricies eros, sed gravida risus. Phasellus sodales dolor eu magna tempus tincidunt sit amet non risus. Praesent purus ex, volutpat et elit quis, viverra euismod neque. Nunc interdum et nunc vel dictum. Sed elementum quis diam eget malesuada.
+                </p>
+            </section>
+            <section>
+                <h1>Outro </h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce malesuada, enim id tempor egestas, tortor odio fermentum ante, sit amet rutrum magna ante sed tellus. Nam quis varius nisl. Pellentesque non magna consectetur odio commodo tempor. Cras at ultricies eros, sed gravida risus. Phasellus sodales dolor eu magna tempus tincidunt sit amet non risus. Praesent purus ex, volutpat et elit quis, viverra euismod neque. Nunc interdum et nunc vel dictum. Sed elementum quis diam eget malesuada.
+                </p>
+            </section>
+        </article>
+
+        <!-- <article id="portifolio">
+            <div class="projeto">
+                <img src="imagens/avatar.jpg" alt="projeto">
+            </div>
+            <div class="projeto">
+                <img src="imagens/avatar.jpg" alt="projeto">
+            </div>
+            <div class="projeto">
+                <img src="imagens/avatar.jpg" alt="projeto">
+            </div>
+            <div class="projeto">
+                <img src="imagens/avatar.jpg" alt="projeto">
+            </div>
+            <div class="projeto">
+                <img src="imagens/avatar.jpg" alt="projeto">
+            </div>
+            <div class="projeto">
+                <img src="imagens/avatar.jpg" alt="projeto">
+            </div>
+        </article> -->
+        <!-- Sobre mim e outras informações -->
+    </main>
+    <footer>
+        <div id="icons">
+            <a href="https://github.com/dayana-freitas"  target="_blank" rel="noopener noreferrer"> <img src="imagens/icon-github.png" alt="Icone do GitHub"> GitHub </a>
+            <a href="https://www.linkedin.com/in/dayana-freitas/"  target="_blank" rel="noopener noreferrer"> <img src="imagens/icon-linkedin.png" alt="Icone do GitHub"> LinkedIn </a>
+        </div>
+        <p id="developed">
+            Developed by Dayana Freitas <br> Hosted in GitHub Pages
+        </p>
+        <!-- Redes sociais e outros links / informações -->
+    </footer>
 </body>
 </html>
