--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="página pessoal de dayana resende de freitas">
+    <meta name="keywords" content="dayana resende de freitas, dayana freitas, programadora, front-end">
     <title>Dayana Freitas</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
