inclusão dos textos

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
         <!-- Nome, informações básicas e foto -->
         <div id="introducao">
             <h1> Dayana Freitas </h1>
-            <p>
-                Estudante de TI
-            </p>
+            <p>Técnica em Desenvolvimento de Sistemas | Cursando Engenharia Elétrica na UTFPR</p>
         </div>
         <div id="avatar">
             <img src="imagens/avatar.jpg" alt="Foto Dayana">
@@ -25,16 +23,26 @@
     <main>
         <article>
             <section id="sobre">
-                <h1>Sobre mim</h1>
+                <h2>Sobre mim</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce malesuada, enim id tempor egestas, tortor odio fermentum ante, sit amet rutrum magna ante sed tellus. Nam quis varius nisl. Pellentesque non magna consectetur odio commodo tempor. Cras at ultricies eros, sed gravida risus. Phasellus sodales dolor eu magna tempus tincidunt sit amet non risus. Praesent purus ex, volutpat et elit quis, viverra euismod neque. Nunc interdum et nunc vel dictum. Sed elementum quis diam eget malesuada.
+                    Sou uma profissional altamente dedicada e versátil, com comprovada excelência acadêmica e habilidades de liderança. Conquistei duas medalhas de Prata nas Olimpíadas Brasileiras de Matemática das Escolas Públicas (OBMEP) e em 2021 me formei em Desenvolvimento de Sistemas pela ETEC de Registro. Demonstrei rápida progressão profissional ao assumir a gerência de um Sacolão em Pariquera-Açu/SP, após apenas seis meses de trabalho. Em 2023, fui aprovada pelo SISU e passei a cursar Engenharia Elétrica na Universidade Tecnológica Federal do Paraná (UTFPR) em Curitiba, onde atualmente resido e me dedico ao meu aprimoramento técnico e profissional.
+                </p>
+                <p>
+                    Atualmente, além da minha graduação estou me dedicando também ao estudo de programação e desenvolvimento com foco em Python, porém já tenho experiência em PHP, JavaScript, C e C#. No meu GitHub tenho alguns projetos que já fiz durante o curso técnico e alguns novos nos quais estou trabalhando. Um deles é o desenvolvimento de um repositório sobre HTML semântico.
                 </p>
             </section>
             <section>
-                <h1>Outro </h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce malesuada, enim id tempor egestas, tortor odio fermentum ante, sit amet rutrum magna ante sed tellus. Nam quis varius nisl. Pellentesque non magna consectetur odio commodo tempor. Cras at ultricies eros, sed gravida risus. Phasellus sodales dolor eu magna tempus tincidunt sit amet non risus. Praesent purus ex, volutpat et elit quis, viverra euismod neque. Nunc interdum et nunc vel dictum. Sed elementum quis diam eget malesuada.
-                </p>
+                <h2>Habilidades</h2>
+                <lu>                    
+                    <li>PHP</li>
+                    <li>JavaScript</li>
+                    <li>Linguagem C</li>
+                    <li>C#</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>MySQL</li>
+                    <li>Python - Estudando</li>
+                </lu>
             </section>
         </article>
 
