--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="página pessoal de dayana resende de freitas">
     <meta name="keywords" content="dayana resende de freitas, dayana freitas, programadora, front-end">
     <title>Dayana Freitas</title>
+    <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon"/>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -33,7 +34,7 @@
             </section>
             <section>
                 <h2>Habilidades</h2>
-                <lu>                    
+                <ul>                    
                     <li>PHP</li>
                     <li>JavaScript</li>
                     <li>Linguagem C</li>
@@ -42,30 +43,45 @@
                     <li>CSS</li>
                     <li>MySQL</li>
                     <li>Python - Estudando</li>
-                </lu>
+                </ul>
             </section>
         </article>
 
-        <!-- <article id="portifolio">
-            <div class="projeto">
-                <img src="imagens/avatar.jpg" alt="projeto">
-            </div>
-            <div class="projeto">
-                <img src="imagens/avatar.jpg" alt="projeto">
-            </div>
-            <div class="projeto">
-                <img src="imagens/avatar.jpg" alt="projeto">
-            </div>
-            <div class="projeto">
-                <img src="imagens/avatar.jpg" alt="projeto">
-            </div>
-            <div class="projeto">
-                <img src="imagens/avatar.jpg" alt="projeto">
-            </div>
-            <div class="projeto">
-                <img src="imagens/avatar.jpg" alt="projeto">
-            </div>
-        </article> -->
+        <article>
+            <h2>Portifólio</h2>
+            <section id="portifolio">
+                <div class="projeto">
+                    <img src="imagens/avatar.jpg" alt="projeto">
+                    <h3>Título</h3>
+                    <p>Resumo do conteúdo do portifólio</p>
+                </div>
+                <div class="projeto">
+                    <img src="imagens/avatar.jpg" alt="projeto">
+                    <h3>Título</h3>
+                    <p>Resumo do conteúdo do portifólio</p>
+                </div>
+                <div class="projeto">
+                    <img src="imagens/avatar.jpg" alt="projeto">
+                    <h3>Título</h3>
+                    <p>Resumo do conteúdo do portifólio</p>
+                </div>
+                <div class="projeto">
+                    <img src="imagens/avatar.jpg" alt="projeto">
+                    <h3>Título</h3>
+                    <p>Resumo do conteúdo do portifólio</p>
+                </div>
+                <div class="projeto">
+                    <img src="imagens/avatar.jpg" alt="projeto">
+                    <h3>Título</h3>
+                    <p>Resumo do conteúdo do portifólio</p>
+                </div>
+                <div class="projeto">
+                    <img src="imagens/avatar.jpg" alt="projeto">
+                    <h3>Título</h3>
+                    <p>Resumo do conteúdo do portifólio</p>
+                </div>
+            </section>
+        </article>
         <!-- Sobre mim e outras informações -->
     </main>
     <footer>
@@ -74,7 +90,7 @@
             <a href="https://www.linkedin.com/in/dayana-freitas/"  target="_blank" rel="noopener noreferrer"> <img src="imagens/icon-linkedin.png" alt="Icone do GitHub"> LinkedIn </a>
         </div>
         <p id="developed">
-            Developed by Dayana Freitas <br> Hosted in GitHub Pages
+            Developed by Dayana Freitas | Hosted in GitHub Pages
         </p>
         <!-- Redes sociais e outros links / informações -->
     </footer>    
