index quase pronta

--- a/portifolio/base.html
+++ b/portifolio/base.html
@@ -7,23 +7,21 @@
     <meta name="keywords" content="dayana resende de freitas, dayana freitas, programadora, front-end">
     <title>Dayana Freitas</title>
     <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon"/>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
         <!-- Nome, informações básicas e foto -->
-        <div id="introducao">
-            <h1> Dayana Freitas </h1>
-            <p>Técnica em Desenvolvimento de Sistemas | Cursando Engenharia Elétrica na UTFPR</p>
-        </div>
-        <div id="avatar">
-            <img src="imagens/avatar.jpg" alt="Foto Dayana">
+        <div id="banner-portifolio">
+            <!-- Banner do Portifólio -->
+            <img src="imagens/quizvelozesecuriosos.png" alt="">
         </div>
     </header>
     <main>
         <article>
-            <section id="sobre">
+            <h1>Titulo</h1>
+            <section>
                 <h2>Sobre mim</h2>
                 <p>
                     Sou uma profissional altamente dedicada e versátil, com comprovada excelência acadêmica e habilidades de liderança. Conquistei duas medalhas de Prata nas Olimpíadas Brasileiras de Matemática das Escolas Públicas (OBMEP) e em 2021 me formei em Desenvolvimento de Sistemas pela ETEC de Registro. Demonstrei rápida progressão profissional ao assumir a gerência de um Sacolão em Pariquera-Açu/SP, após apenas seis meses de trabalho. Em 2023, fui aprovada pelo SISU e passei a cursar Engenharia Elétrica na Universidade Tecnológica Federal do Paraná (UTFPR) em Curitiba, onde atualmente resido e me dedico ao meu aprimoramento técnico e profissional.
@@ -46,53 +44,54 @@
                 </ul>
             </section>
         </article>
-        <article>
-            <h2>Portifólio</h2>
-            <section id="portifolio">
-                <div class="item-portifolio">
+
+        <!-- <article>
+            <h2>Imagens</h2>
+            <section id="carrossel">
+                <div class="projeto">
                     <img src="portifolio/imagens/quizvelozesecuriosos.png" alt="projeto">
                     <h3>Quiz Velozes e Curiosos</h3>
                     <p>Quiz desenvolvido na linguagem C</p>
-                    <a href="portifolio/base.html"><button type="button">Saiba Mais</button></a>
+                    <a href="portifolio/quizvelozesecuriosos.html"><button type="button">Continue Lendo</button></a>
                 </div>
-                <div class="item-portifolio">
+                <div class="projeto">
                     <img src="imagens/avatar.jpg" alt="projeto">
                     <h3>Título</h3>
                     <p>Resumo do conteúdo do portifólio</p>
                     <a href="https://wipsites.com.br"><button type="button">Continue Lendo</button></a>
                 </div>
-                <div class="item-portifolio">
+                <div class="projeto">
                     <img src="imagens/avatar.jpg" alt="projeto">
                     <h3>Título</h3>
                     <p>Resumo do conteúdo do portifólio</p>
                     <a href="https://wipsites.com.br"><button type="button">Continue Lendo</button></a>
                 </div>
-                <div class="item-portifolio">
+                <div class="projeto">
                     <img src="imagens/avatar.jpg" alt="projeto">
                     <h3>Título</h3>
                     <p>Resumo do conteúdo do portifólio</p>
                     <a href="https://wipsites.com.br"><button type="button">Continue Lendo</button></a>
                 </div>
-                <div class="item-portifolio">
+                <div class="projeto">
                     <img src="imagens/avatar.jpg" alt="projeto">
                     <h3>Título</h3>
                     <p>Resumo do conteúdo do portifólio</p>
                     <a href="https://wipsites.com.br"><button type="button">Continue Lendo</button></a>
                 </div>
-                <div class="item-portifolio">
+                <div class="projeto">
                     <img src="imagens/avatar.jpg" alt="projeto">
                     <h3>Título</h3>
                     <p>Resumo do conteúdo do portifólio</p>
                     <a href="https://wipsites.com.br"><button type="button">Continue Lendo</button></a>
                 </div>
             </section>
-        </article>
+        </article> -->
         <!-- Sobre mim e outras informações -->
     </main>
     <footer>
         <div id="icons">
-            <a href="https://github.com/dayana-freitas"  target="_blank" rel="noopener noreferrer"> <img src="imagens/icon-github.png" alt="Icone do GitHub"> GitHub </a>
-            <a href="https://www.linkedin.com/in/dayana-freitas/"  target="_blank" rel="noopener noreferrer"> <img src="imagens/icon-linkedin.png" alt="Icone do GitHub"> LinkedIn </a>
+            <a href="https://github.com/dayana-freitas"  target="_blank" rel="noopener noreferrer"> <img src="../imagens/icon-github.png" alt="Icone do GitHub"> GitHub </a>
+            <a href="https://www.linkedin.com/in/dayana-freitas/"  target="_blank" rel="noopener noreferrer"> <img src="../imagens/icon-linkedin.png" alt="Icone do LinkedIn"> LinkedIn </a>
         </div>
         <p id="developed">
             Developed by Dayana Freitas | Hosted in GitHub Pages
