montando o arquivo base para o portifolio

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="página pessoal de dayana resende de freitas">
-    <meta name="keywords" content="dayana resende de freitas, dayana freitas, programadora, front-end">
+    <meta name="description" content="Página pessoal de Dayana Freitas">
+    <meta name="keywords" content="dayana resende de freitas, dayana freitas, dayana-freitas, dayana freitas portifolio">
     <title>Dayana Freitas</title>
     <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon"/>
     <link rel="stylesheet" href="css/reset.css">
@@ -12,7 +12,6 @@
 </head>
 <body>
     <header>
-        <!-- Nome, informações básicas e foto -->
         <div id="introducao">
             <h1> Dayana Freitas </h1>
             <p>Técnica em Desenvolvimento de Sistemas | Cursando Engenharia Elétrica na UTFPR</p>
@@ -87,17 +86,13 @@
                 </div>
             </section>
         </article>
-        <!-- Sobre mim e outras informações -->
     </main>
     <footer>
         <div id="icons">
-            <a href="https://github.com/dayana-freitas"  target="_blank" rel="noopener noreferrer"> <img src="imagens/icon-github.png" alt="Icone do GitHub"> GitHub </a>
-            <a href="https://www.linkedin.com/in/dayana-freitas/"  target="_blank" rel="noopener noreferrer"> <img src="imagens/icon-linkedin.png" alt="Icone do GitHub"> LinkedIn </a>
+            <a href="https://github.com/dayana-freitas"  target="_blank" rel="noopener noreferrer"><img src="imagens/icon-github.png" alt="Icone do GitHub"> GitHub</a>
+            <a href="https://www.linkedin.com/in/dayana-freitas/"  target="_blank" rel="noopener noreferrer"><img src="imagens/icon-linkedin.png" alt="Icone do LinkedIn"> LinkedIn</a>
         </div>
-        <p id="developed">
-            Developed by Dayana Freitas | Hosted in GitHub Pages
-        </p>
-        <!-- Redes sociais e outros links / informações -->
-    </footer>    
+        <p id="developed">Developed by Dayana Freitas | Hosted in GitHub Pages</p>
+    </footer>
 </body>
 </html>
