--- a/portifolio/base.html
+++ b/portifolio/base.html
@@ -3,100 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="página pessoal de dayana resende de freitas">
-    <meta name="keywords" content="dayana resende de freitas, dayana freitas, programadora, front-end">
+    <meta name="description" content="Página pessoal de Dayana Freitas">
+    <meta name="keywords" content="dayana resende de freitas, dayana freitas, dayana-freitas, dayana freitas portifolio">
     <title>Dayana Freitas</title>
     <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon"/>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 </head>
-<body>
+<body ng-app="">
     <header>
-        <!-- Nome, informações básicas e foto -->
         <div id="banner-portifolio">
-            <!-- Banner do Portifólio -->
-            <img src="imagens/quizvelozesecuriosos.png" alt="">
+            <img src="imagens/quizvelozesecuriosos.png" alt="Tela inicial do quiz Velozes e Curiosos">
         </div>
     </header>
     <main>
         <article>
             <h1>Titulo</h1>
             <section>
-                <h2>Sobre mim</h2>
-                <p>
-                    Sou uma profissional altamente dedicada e versátil, com comprovada excelência acadêmica e habilidades de liderança. Conquistei duas medalhas de Prata nas Olimpíadas Brasileiras de Matemática das Escolas Públicas (OBMEP) e em 2021 me formei em Desenvolvimento de Sistemas pela ETEC de Registro. Demonstrei rápida progressão profissional ao assumir a gerência de um Sacolão em Pariquera-Açu/SP, após apenas seis meses de trabalho. Em 2023, fui aprovada pelo SISU e passei a cursar Engenharia Elétrica na Universidade Tecnológica Federal do Paraná (UTFPR) em Curitiba, onde atualmente resido e me dedico ao meu aprimoramento técnico e profissional.
-                </p>
-                <p>
-                    Atualmente, além da minha graduação estou me dedicando também ao estudo de programação e desenvolvimento com foco em Python, porém já tenho experiência em PHP, JavaScript, C e C#. No meu GitHub tenho alguns projetos que já fiz durante o curso técnico e alguns novos nos quais estou trabalhando. Um deles é o desenvolvimento de um repositório sobre HTML semântico.
-                </p>
+                <h2>Descrição</h2>
+                <p>Descrição do Projeto</p>
             </section>
             <section>
-                <h2>Habilidades</h2>
+                <h2>Como Instalar/Acessar</h2>
+                <p>Descrição do Projeto</p>
+                <p><a href="">LINK DO REPOSITÓRIO NO GITHUB</a></p>
+            </section>
+            <section>
+                <h2>Linguagens e bibliotecas usadas no desenvolvimento</h2>
                 <ul>                    
-                    <li>PHP</li>
-                    <li>JavaScript</li>
-                    <li>Linguagem C</li>
-                    <li>C#</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>MySQL</li>
-                    <li>Python - Estudando</li>
+                    <li>Linguagem 1</li>
+                    <li>Linguagem 2</li>
                 </ul>
             </section>
-        </article>
-
-        <!-- <article>
-            <h2>Imagens</h2>
-            <section id="carrossel">
-                <div class="projeto">
-                    <img src="portifolio/imagens/quizvelozesecuriosos.png" alt="projeto">
-                    <h3>Quiz Velozes e Curiosos</h3>
-                    <p>Quiz desenvolvido na linguagem C</p>
-                    <a href="portifolio/quizvelozesecuriosos.html"><button type="button">Continue Lendo</button></a>
-                </div>
-                <div class="projeto">
-                    <img src="imagens/avatar.jpg" alt="projeto">
-                    <h3>Título</h3>
-                    <p>Resumo do conteúdo do portifólio</p>
-                    <a href="https://wipsites.com.br"><button type="button">Continue Lendo</button></a>
-                </div>
-                <div class="projeto">
-                    <img src="imagens/avatar.jpg" alt="projeto">
-                    <h3>Título</h3>
-                    <p>Resumo do conteúdo do portifólio</p>
-                    <a href="https://wipsites.com.br"><button type="button">Continue Lendo</button></a>
-                </div>
-                <div class="projeto">
-                    <img src="imagens/avatar.jpg" alt="projeto">
-                    <h3>Título</h3>
-                    <p>Resumo do conteúdo do portifólio</p>
-                    <a href="https://wipsites.com.br"><button type="button">Continue Lendo</button></a>
-                </div>
-                <div class="projeto">
-                    <img src="imagens/avatar.jpg" alt="projeto">
-                    <h3>Título</h3>
-                    <p>Resumo do conteúdo do portifólio</p>
-                    <a href="https://wipsites.com.br"><button type="button">Continue Lendo</button></a>
-                </div>
-                <div class="projeto">
-                    <img src="imagens/avatar.jpg" alt="projeto">
-                    <h3>Título</h3>
-                    <p>Resumo do conteúdo do portifólio</p>
-                    <a href="https://wipsites.com.br"><button type="button">Continue Lendo</button></a>
-                </div>
+            <section>
             </section>
-        </article> -->
+        </article>
+        <article>
+            <h2>Imagens</h2>
+            <!-- <div id="carrossel" data-component="slideshow">
+                <div role="list">
+                    <div class="slide">
+                        <img src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?w=752&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?w=750&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="https://images.unsplash.com/photo-1498753427761-548428edfa67?w=889&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" alt="">
+                    </div>
+                </div>
+            </div> -->
+        </article>
         <!-- Sobre mim e outras informações -->
     </main>
-    <footer>
-        <div id="icons">
-            <a href="https://github.com/dayana-freitas"  target="_blank" rel="noopener noreferrer"> <img src="../imagens/icon-github.png" alt="Icone do GitHub"> GitHub </a>
-            <a href="https://www.linkedin.com/in/dayana-freitas/"  target="_blank" rel="noopener noreferrer"> <img src="../imagens/icon-linkedin.png" alt="Icone do LinkedIn"> LinkedIn </a>
-        </div>
-        <p id="developed">
-            Developed by Dayana Freitas | Hosted in GitHub Pages
-        </p>
-        <!-- Redes sociais e outros links / informações -->
-    </footer>    
+    <footer ng-include="'../blocks/footer.html'"><!-- Importação do footer --></footer>
 </body>
 </html>
