--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <div id="introducao">
-            <h1> Dayana Freitas </h1>
-            <p>Técnica em Desenvolvimento de Sistemas | Cursando Engenharia Elétrica na UTFPR</p>
+            <h1>Dayana Freitas</h1>
+            <p>Front-End | Técnica em Desenvolvimento de Sistemas | Cursando Engenharia Elétrica na UTFPR</p>
         </div>
         <div id="avatar">
             <img src="imagens/avatar.jpg" alt="Foto Dayana">
@@ -51,7 +51,7 @@
                 <div class="item-portifolio">
                     <img src="portifolio/imagens/quizvelozesecuriosos.png" alt="projeto">
                     <h3>Quiz Velozes e Curiosos</h3>
-                    <p>Quiz desenvolvido na linguagem C</p>
+                    <p>Qual personagem da série de filmes Velozes e Furiosos você seria? Esse quiz analiza suas escolhas e lhe dá um personagem dentre os 4 disponíveis.</p>
                     <a href="portifolio/base.html"><button type="button">Saiba Mais</button></a>
                 </div>
                 <div class="item-portifolio">
