--- a/index.html
+++ b/index.html
@@ -49,40 +49,23 @@
             <h2>Portifólio</h2>
             <section id="portifolio">
                 <div class="item-portifolio">
-                    <img src="portifolio/imagens/quizvelozesecuriosos.png" alt="projeto">
-                    <h3>Quiz Velozes e Curiosos</h3>
-                    <p>Qual personagem da série de filmes Velozes e Furiosos você seria? Esse quiz analiza suas escolhas e lhe dá um personagem dentre os 4 disponíveis.</p>
-                    <a href="portifolio/base.html"><button type="button">Saiba Mais</button></a>
+                    <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
+                    <h3>Template</h3>
+                    <p>Template template template template template template template template template template template template template template</p>
+                    <a href="portifolio/template.html"><button type="button">Saiba Mais</button></a>
+                </div>
+
+                <div class="item-portifolio">
+                    <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
+                    <h3>Template</h3>
+                    <p>Template template template template template template template template template template template template template template</p>
+                    <a href="portifolio/template.html"><button type="button">Saiba Mais</button></a>
                 </div>
                 <div class="item-portifolio">
-                    <img src="imagens/avatar.jpg" alt="projeto">
-                    <h3>Título</h3>
-                    <p>Resumo do conteúdo do portifólio</p>
-                    <a href="https://wipsites.com.br"><button type="button">Continue Lendo</button></a>
-                </div>
-                <div class="item-portifolio">
-                    <img src="imagens/avatar.jpg" alt="projeto">
-                    <h3>Título</h3>
-                    <p>Resumo do conteúdo do portifólio</p>
-                    <a href="https://wipsites.com.br"><button type="button">Continue Lendo</button></a>
-                </div>
-                <div class="item-portifolio">
-                    <img src="imagens/avatar.jpg" alt="projeto">
-                    <h3>Título</h3>
-                    <p>Resumo do conteúdo do portifólio</p>
-                    <a href="https://wipsites.com.br"><button type="button">Continue Lendo</button></a>
-                </div>
-                <div class="item-portifolio">
-                    <img src="imagens/avatar.jpg" alt="projeto">
-                    <h3>Título</h3>
-                    <p>Resumo do conteúdo do portifólio</p>
-                    <a href="https://wipsites.com.br"><button type="button">Continue Lendo</button></a>
-                </div>
-                <div class="item-portifolio">
-                    <img src="imagens/avatar.jpg" alt="projeto">
-                    <h3>Título</h3>
-                    <p>Resumo do conteúdo do portifólio</p>
-                    <a href="https://wipsites.com.br"><button type="button">Continue Lendo</button></a>
+                    <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
+                    <h3>Template</h3>
+                    <p>Template template template template template template template template template template template template template template</p>
+                    <a href="portifolio/template.html"><button type="button">Saiba Mais</button></a>
                 </div>
             </section>
         </article>
