alteraçoes de design

--- a/index.html
+++ b/index.html
@@ -52,20 +52,31 @@
                     <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
                     <h3>Template</h3>
                     <p>Template template template template template template template template template template template template template template</p>
-                    <a href="portifolio/template.html"><button type="button">Saiba Mais</button></a>
-                </div>
-
-                <div class="item-portifolio">
-                    <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
-                    <h3>Template</h3>
-                    <p>Template template template template template template template template template template template template template template</p>
-                    <a href="portifolio/template.html"><button type="button">Saiba Mais</button></a>
+                    <button type="button"><a href="portifolio/template.html">Saiba Mais</a></button>
                 </div>
                 <div class="item-portifolio">
                     <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
                     <h3>Template</h3>
                     <p>Template template template template template template template template template template template template template template</p>
-                    <a href="portifolio/template.html"><button type="button">Saiba Mais</button></a>
+                    <button type="button"><a href="portifolio/template.html">Saiba Mais</a></button>
+                </div>
+                <div class="item-portifolio">
+                    <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
+                    <h3>Template</h3>
+                    <p>Template template template template template template template template template template template template template template</p>
+                    <button type="button"><a href="portifolio/template.html">Saiba Mais</a></button>
+                </div>
+                <div class="item-portifolio">
+                    <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
+                    <h3>Template</h3>
+                    <p>Template template template template template template template template template template template template template template</p>
+                    <button type="button"><a href="portifolio/template.html">Saiba Mais</a></button>
+                </div>
+                <div class="item-portifolio">
+                    <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
+                    <h3>Template</h3>
+                    <p>Template template template template template template template template template template template template template template</p>
+                    <button type="button"><a href="portifolio/template.html">Saiba Mais</a></button>
                 </div>
             </section>
         </article>
