--- a/portifolio/template.html
+++ b/portifolio/template.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Página pessoal de Dayana Freitas">
     <meta name="keywords" content="dayana resende de freitas, dayana freitas, dayana-freitas, dayana freitas portifolio">
     <title>Dayana Freitas</title>
-    <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="../imagens/favicon.png" type="image/x-icon"/>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
     <!-- script para importar partes do html em outros arquivos através de uma biblioteca angular -->
