Conteúdo do portifólio parcialmente adicionado

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     <li>JavaScript</li>
                     <li>Linguagem C</li>
                     <li>C#</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
                     <li>MySQL</li>
                     <li>Python - Estudando</li>
                 </ul>
@@ -49,35 +49,23 @@
             <h2>Portifólio</h2>
             <section id="portifolio">
                 <div class="item-portifolio">
-                    <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
-                    <h3>Template</h3>
-                    <p>Template template template template template template template template template template template template template template</p>
-                    <button type="button"><a href="portifolio/template.html">Saiba Mais</a></button>
+                    <img src="portifolio/imagens/banner-paginapessoal.png" alt="Imagem do projeto">
+                    <h3>Página Pessoal</h3>
+                    <p>Minha página pessoal (está que você esta vendo) desenvolvida em HTML e CSS</p>
+                    <button type="button"><a href="portifolio/paginapessoal.html">Saiba Mais</a></button>
                 </div>
                 <div class="item-portifolio">
+                    <img src="portifolio/imagens/banner-quizvelozescuriosos.png" alt="Imagem do projeto">
+                    <h3>Quiz Velozes e Curiosos</h3>
+                    <p>Um quiz desenvolvido na linguagem C sobre qual personagem de velozes e furiosos você seria.</p>
+                    <button type="button"><a href="portifolio/quizvelozesecuriosos.html">Saiba Mais</a></button>
+                </div>
+                <!-- <div class="item-portifolio">
                     <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
                     <h3>Template</h3>
                     <p>Template template template template template template template template template template template template template template</p>
                     <button type="button"><a href="portifolio/template.html">Saiba Mais</a></button>
-                </div>
-                <div class="item-portifolio">
-                    <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
-                    <h3>Template</h3>
-                    <p>Template template template template template template template template template template template template template template</p>
-                    <button type="button"><a href="portifolio/template.html">Saiba Mais</a></button>
-                </div>
-                <div class="item-portifolio">
-                    <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
-                    <h3>Template</h3>
-                    <p>Template template template template template template template template template template template template template template</p>
-                    <button type="button"><a href="portifolio/template.html">Saiba Mais</a></button>
-                </div>
-                <div class="item-portifolio">
-                    <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
-                    <h3>Template</h3>
-                    <p>Template template template template template template template template template template template template template template</p>
-                    <button type="button"><a href="portifolio/template.html">Saiba Mais</a></button>
-                </div>
+                </div> -->
             </section>
         </article>
     </main>
