melhorias de design icone de voltar atualizacoes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div id="introducao">
             <h1>Dayana Freitas</h1>
-            <p>Front-End | Técnica em Desenvolvimento de Sistemas | Cursando Engenharia Elétrica na UTFPR</p>
+            <p>Cursando Engenharia Elétrica na UTFPR | Técnica em Desenvolvimento de Sistemas pela Etec de Registro</p>
         </div>
         <div id="avatar">
             <img src="imagens/avatar.jpg" alt="Foto Dayana">
@@ -25,41 +25,44 @@
             <section id="sobre">
                 <h2>Sobre mim</h2>
                 <p>
-                    Sou uma profissional altamente dedicada e versátil, com comprovada excelência acadêmica e habilidades de liderança. Conquistei duas medalhas de Prata nas Olimpíadas Brasileiras de Matemática das Escolas Públicas (OBMEP) e em 2021 me formei em Desenvolvimento de Sistemas pela ETEC de Registro. Demonstrei rápida progressão profissional ao assumir a gerência de um Sacolão em Pariquera-Açu/SP, após apenas seis meses de trabalho. Em 2023, fui aprovada pelo SISU e passei a cursar Engenharia Elétrica na Universidade Tecnológica Federal do Paraná (UTFPR) em Curitiba, onde atualmente resido e me dedico ao meu aprimoramento técnico e profissional.
+                    Sou uma profissional dedicada, com comprovada excelência acadêmica e habilidades de liderança. Conquistei duas medalhas de Prata nas Olimpíadas Brasileiras de Matemática das Escolas Públicas (OBMEP) e em 2021 me formei em Desenvolvimento de Sistemas pela ETEC de Registro. Demonstrei rápida progressão profissional ao assumir a gerência de um Sacolão em Pariquera-Açu/SP, após apenas seis meses de trabalho. Em 2023, fui aprovada pelo SISU e passei a cursar Engenharia Elétrica na Universidade Tecnológica Federal do Paraná (UTFPR) em Curitiba, onde atualmente resido e me dedico ao meu aprimoramento técnico e profissional.
                 </p>
-                <p>
-                    Atualmente, além da minha graduação estou me dedicando também ao estudo de programação e desenvolvimento com foco em Python, porém já tenho experiência em PHP, JavaScript, C e C#. No meu GitHub tenho alguns projetos que já fiz durante o curso técnico e alguns novos nos quais estou trabalhando. Um deles é o desenvolvimento de um repositório sobre HTML semântico.
-                </p>
+                <!-- <p>
+                    Atualmente, além da minha graduação estou me dedicando também ao estudo de programação e desenvolvimento. No meu GitHub tenho alguns projetos que já fiz durante o curso técnico e alguns novos nos quais estou trabalhando ou fazendo durante a faculdade. Um deles é o desenvolvimento de um repositório sobre HTML semântico.
+                </p> -->
             </section>
             <section>
                 <h2>Habilidades</h2>
-                <ul>                    
+                <ul>
+                    <li>Linguagem C</li>
+                    <li>HTML5</li>
+                    <li>CSS3</li>                    
                     <li>PHP</li>
                     <li>JavaScript</li>
-                    <li>Linguagem C</li>
-                    <li>C#</li>
-                    <li>HTML5</li>
-                    <li>CSS3</li>
-                    <li>MySQL</li>
-                    <li>Python - Estudando</li>
                 </ul>
             </section>
         </article>
         <article>
             <h2>Portifólio</h2>
             <section id="portifolio">
-                <div class="item-portifolio">
+                <!-- <div class="item-portifolio">
                     <img src="portifolio/imagens/banner-paginapessoal.png" alt="Imagem do projeto">
                     <h3>Página Pessoal</h3>
                     <p>Minha página pessoal (está que você esta vendo) desenvolvida em HTML e CSS</p>
                     <button type="button"><a href="portifolio/paginapessoal.html">Saiba Mais</a></button>
-                </div>
+                </div> -->
                 <div class="item-portifolio">
                     <img src="portifolio/imagens/banner-quizvelozescuriosos.png" alt="Imagem do projeto">
                     <h3>Quiz Velozes e Curiosos</h3>
-                    <p>Um quiz desenvolvido na linguagem C sobre qual personagem de velozes e furiosos você seria.</p>
+                    <p>Um quiz desenvolvido na linguagem C sobre qual personagem da saga Velozes e Furiosos você seria.</p>
                     <button type="button"><a href="portifolio/quizvelozesecuriosos.html">Saiba Mais</a></button>
                 </div>
+                <!-- <div class="item-portifolio">
+                    <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
+                    <h3>Template</h3>
+                    <p>Template template template template template template template template template template template template template template</p>
+                    <button type="button"><a href="portifolio/template.html">Saiba Mais</a></button>
+                </div> -->
                 <!-- <div class="item-portifolio">
                     <img src="portifolio/imagens/banner-template.jpg" alt="Imagem do projeto">
                     <h3>Template</h3>
