--- a/portifolio/quizvelozesecuriosos.html
+++ b/portifolio/quizvelozesecuriosos.html
@@ -14,6 +14,7 @@
 </head>
 <body ng-app="">
     <header>
+        <a class="voltar" href="/index.html"><img src="/imagens/icon-arrow-back.png" alt="Icone voltar"></a>
         <div id="banner-portifolio">
             <img src="imagens/banner-quizvelozescuriosos.png" alt="Tela inicial do quiz no Online GDB">
         </div>
@@ -67,10 +68,10 @@
                     <input type="radio" name="slide" id="slide3">
                     <input type="radio" name="slide" id="slide4">
                     <div class="navigation">
-                        <label class="bar" for="slide1"></label>
-                        <label class="bar" for="slide2"></label>
-                        <label class="bar" for="slide3"></label>
-                        <label class="bar" for="slide4"></label>
+                        <label class="bar bar1" for="slide1"></label>
+                        <label class="bar bar2" for="slide2"></label>
+                        <label class="bar bar3" for="slide3"></label>
+                        <label class="bar bar4" for="slide4"></label>
                     </div>
                     <div class="slide s1">
                         <img src="imagens/carrossel/quiz-velozes-curiosos-img1.png" alt="Imagem um do template">
