--- a/portifolio/template.html
+++ b/portifolio/template.html
@@ -14,6 +14,7 @@
 </head>
 <body ng-app="">
     <header>
+        <a class="voltar" href="/index.html"><img src="/imagens/icon-arrow-back.png" alt="Icone voltar"></a>
         <div id="banner-portifolio">
             <img src="imagens/banner-template.jpg" alt="Descrição do Banner">
         </div>
@@ -49,11 +50,11 @@
                     <input type="radio" name="slide" id="slide4">
                     <input type="radio" name="slide" id="slide5">
                     <div class="navigation">
-                        <label class="bar" for="slide1"></label>
-                        <label class="bar" for="slide2"></label>
-                        <label class="bar" for="slide3"></label>
-                        <label class="bar" for="slide4"></label>
-                        <label class="bar" for="slide5"></label>
+                        <label class="bar bar1" for="slide1"></label>
+                        <label class="bar bar2" for="slide2"></label>
+                        <label class="bar bar3" for="slide3"></label>
+                        <label class="bar bar4" for="slide4"></label>
+                        <label class="bar bar5" for="slide5"></label>
                     </div>
                     <div class="slide s1">
                         <img src="imagens/carrossel/template-img1.jpg" alt="Imagem um do template">
