--- a/portifolio/template.html
+++ b/portifolio/template.html
@@ -14,7 +14,7 @@
 </head>
 <body ng-app="">
     <header>
-        <a class="voltar" href="/index.html"><img src="/imagens/icon-arrow-back.png" alt="Icone voltar"></a>
+        <a class="voltar" href="https://dayana-freitas.github.io/dayana-freitas/"><img src="../imagens/icon-arrow-back.png" alt="Icone voltar"></a>
         <div id="banner-portifolio">
             <img src="imagens/banner-template.jpg" alt="Descrição do Banner">
         </div>
